--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -1,79 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context="mastersunny.unitedclub.Activity.ScrollingActivity">
+    android:layout_height="match_parent">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/app_bar"
+    <ImageView
+        android:id="@+id/cover_image"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:fitsSystemWindows="true"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/toolbar_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
-            app:contentScrim="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:toolbarId="@+id/toolbar">
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="210dp"
-                android:background="@color/item_details"
-                android:scaleType="centerCrop"
-                app:layout_collapseMode="parallax" />
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-        </android.support.design.widget.CollapsingToolbarLayout>
-    </android.support.design.widget.AppBarLayout>
+        android:layout_height="@dimen/profile_cover_img_height"
+        android:scaleType="centerCrop"
+        android:src="@drawable/profile_background" />
 
     <mastersunny.unitedclub.utils.CircleImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@drawable/profile_image"
-        app:layout_anchor="@id/app_bar"
-        app:layout_anchorGravity="center" />
-
-    <ImageView
-        android:id="@+id/change_cover_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top|right"
-        android:layout_marginRight="@dimen/margin_20"
-        android:layout_marginTop="?android:actionBarSize"
-        android:background="?selectableItemBackground"
-        android:padding="@dimen/margin_10"
-        android:src="@drawable/ic_edit_black_24dp" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/margin_30"
+        android:src="@drawable/profile_image" />
 
     <ImageView
         android:id="@+id/back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="top|left"
-        android:layout_marginLeft="@dimen/margin_20"
-        android:layout_marginTop="@dimen/margin_30"
+        android:layout_marginLeft="@dimen/margin_10"
+        android:layout_marginTop="@dimen/margin_20"
         android:background="?selectableItemBackground"
-        android:src="@drawable/ic_chevron_left_black_24dp" />
+        android:padding="@dimen/margin_10"
+        app:srcCompat="@drawable/ic_chevron_left_black_24dp" />
+
+    <ImageView
+        android:id="@+id/change_cover_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="@dimen/margin_20"
+        android:layout_marginTop="?android:actionBarSize"
+        android:background="?selectableItemBackground"
+        android:padding="@dimen/margin_10"
+        app:srcCompat="@drawable/ic_edit_black_24dp" />
+
 
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/cover_image"
         android:layout_marginTop="@dimen/margin_10"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
@@ -131,28 +102,12 @@
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/phone_number"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:hint="Phone Number"
-                    android:inputType="text"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textColor="@android:color/black"
-                    android:textColorHint="@android:color/black" />
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <EditText
                     android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
                     android:hint="Email"
-                    android:inputType="text"
+                    android:inputType="textEmailAddress"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="@android:color/black"
                     android:textColorHint="@android:color/black" />
@@ -168,170 +123,14 @@
                 android:textColor="@android:color/white" />
 
             <Button
-                android:id="@+id/change_password"
+                android:id="@+id/change_phone_number"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_10"
                 android:background="@null"
-                android:text="@string/change_pasword"
+                android:text="@string/change_phone_number"
                 android:textAllCaps="false"
                 android:textColor="@color/colorAccent" />
-
-
-            <!--<RelativeLayout-->
-            <!--android:id="@+id/first_name_layout"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:background="@drawable/profile_item_bg"-->
-            <!--android:padding="@dimen/margin_10">-->
-
-            <!--<TextView-->
-            <!--android:id="@+id/first_name_text"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_alignParentLeft="true"-->
-            <!--android:text="First Name" />-->
-
-            <!--<TextView-->
-            <!--android:id="@+id/first_name"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_below="@+id/first_name_text"-->
-            <!--android:text="Master"-->
-            <!--android:textColor="@android:color/black"-->
-            <!--android:textSize="@dimen/text_size_16" />-->
-
-            <!--<ImageView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_alignParentRight="true"-->
-            <!--android:layout_centerVertical="true"-->
-            <!--android:src="@drawable/ic_chevron_right_black_24dp" />-->
-            <!--</RelativeLayout>-->
-
-            <!--<RelativeLayout
-                android:id="@+id/last_name_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/profile_item_bg"
-                android:padding="@dimen/margin_10">
-
-                <TextView
-                    android:id="@+id/last_name_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:text="Last Name" />
-
-                <TextView
-                    android:id="@+id/last_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/last_name_text"
-                    android:text="John"
-                    android:textColor="@android:color/black"
-                    android:textSize="@dimen/text_size_16" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/ic_chevron_right_black_24dp" />
-            </RelativeLayout>-->
-
-            <!--<RelativeLayout-->
-            <!--android:id="@+id/phone_number_layout"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:background="@drawable/profile_item_bg"-->
-            <!--android:padding="@dimen/margin_10">-->
-
-            <!--<TextView-->
-            <!--android:id="@+id/phone_number_text"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_alignParentLeft="true"-->
-            <!--android:text="Phone Number" />-->
-
-            <!--<TextView-->
-            <!--android:id="@+id/phone_number"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_below="@+id/phone_number_text"-->
-            <!--android:text="01629121345"-->
-            <!--android:textColor="@android:color/black"-->
-            <!--android:textSize="@dimen/text_size_16" />-->
-
-            <!--<ImageView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_alignParentRight="true"-->
-            <!--android:layout_centerVertical="true"-->
-            <!--android:src="@drawable/ic_chevron_right_black_24dp" />-->
-            <!--</RelativeLayout>-->
-
-            <!--<RelativeLayout-->
-            <!--android:id="@+id/email_layout"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:background="@drawable/profile_item_bg"-->
-            <!--android:padding="@dimen/margin_10">-->
-
-            <!--<TextView-->
-            <!--android:id="@+id/email_text"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_alignParentLeft="true"-->
-            <!--android:text="Email" />-->
-
-            <!--<TextView-->
-            <!--android:id="@+id/email"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_below="@+id/email_text"-->
-            <!--android:text="master@gmail.com"-->
-            <!--android:textColor="@android:color/black"-->
-            <!--android:textSize="@dimen/text_size_16" />-->
-
-            <!--<ImageView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_alignParentRight="true"-->
-            <!--android:layout_centerVertical="true"-->
-            <!--android:src="@drawable/ic_chevron_right_black_24dp" />-->
-            <!--</RelativeLayout>-->
-
-            <!--<RelativeLayout-->
-            <!--android:id="@+id/password_layout"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:background="@drawable/profile_item_bg"-->
-            <!--android:padding="@dimen/margin_10">-->
-
-            <!--<TextView-->
-            <!--android:id="@+id/password_text"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_alignParentLeft="true"-->
-            <!--android:text="Password" />-->
-
-            <!--<TextView-->
-            <!--android:id="@+id/password"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_below="@+id/password_text"-->
-            <!--android:text="******"-->
-            <!--android:textColor="@android:color/black"-->
-            <!--android:textSize="@dimen/text_size_16" />-->
-
-            <!--<ImageView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_alignParentRight="true"-->
-            <!--android:layout_centerVertical="true"-->
-            <!--android:src="@drawable/ic_chevron_right_black_24dp" />-->
-            <!--</RelativeLayout>-->
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
