--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -3,32 +3,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
-        android:layout_marginTop="@dimen/margin_20"
-        android:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+        android:layout_marginTop="@dimen/margin_20">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/back_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/margin_10"
+            android:background="?selectableItemBackground"
+            android:padding="@dimen/margin_10"
+            android:src="@drawable/ic_chevron_left_black_24dp" />
 
-            <ImageView
-                android:id="@+id/back_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="?selectableItemBackground"
-                android:padding="@dimen/margin_10"
-                android:src="@drawable/ic_chevron_left_black_24dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:text="Change phone number" />
-        </LinearLayout>
-    </android.support.v7.widget.Toolbar>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="Change phone number"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/text_size_16" />
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
