--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -76,7 +76,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
-            android:text="Confirm New Password" />
+            android:text="Confirm phone number" />
 
         <EditText
             android:id="@+id/confirm_new_phone_number"
