--- a/app/src/main/res/layout/activity_mobile_verification.xml
+++ b/app/src/main/res/layout/activity_mobile_verification.xml
@@ -25,13 +25,13 @@
             android:layout_width="@dimen/logo_w_h"
             android:layout_height="@dimen/logo_w_h"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="30dp"
             android:src="@mipmap/united_icon" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/margin_20"
             android:text="Enter the code sent to"
             android:textSize="@dimen/text_size_16" />
 
