--- a/app/src/main/res/layout/activity_stores_details.xml
+++ b/app/src/main/res/layout/activity_stores_details.xml
@@ -1,136 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
-
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appBarLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fitsSystemWindows="true">
-
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/htab_collapse_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fitsSystemWindows="true"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/item_details"
-                app:layout_collapseMode="parallax">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="@dimen/margin_20"
-                    android:paddingLeft="@dimen/margin_20"
-                    android:paddingTop="@dimen/margin_20">
-
-                    <View
-                        android:id="@+id/dummy"
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp" />
-
-                    <TextView
-                        android:id="@+id/total_offer"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/dummy"
-                        android:layout_marginTop="@dimen/margin_10"
-                        android:text="10 Offers"
-                        android:textColor="@color/white" />
-
-                    <RelativeLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/total_offer"
-                        android:layout_marginTop="@dimen/margin_10">
-
-                        <ImageView
-                            android:id="@+id/store_image"
-                            android:layout_width="100dp"
-                            android:layout_height="80dp"
-                            android:scaleType="fitXY"
-                            android:src="@drawable/deli_grocery_m" />
-
-                        <LinearLayout
-                            android:id="@+id/follow_layout"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/margin_20"
-                            android:layout_toRightOf="@id/store_image"
-                            android:background="@drawable/follow_background">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:paddingBottom="@dimen/margin_5"
-                                android:paddingLeft="@dimen/margin_20"
-                                android:paddingRight="@dimen/margin_20"
-                                android:paddingTop="@dimen/margin_5"
-                                android:text="Follow"
-                                android:textColor="@color/white" />
-                        </LinearLayout>
-
-                        <RatingBar
-                            android:id="@+id/ratingBar"
-                            style="@style/CustomRatingBar"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@+id/follow_layout"
-                            android:layout_marginLeft="@dimen/margin_20"
-                            android:layout_marginTop="@dimen/margin_10"
-                            android:layout_toRightOf="@+id/store_image" />
-                    </RelativeLayout>
-                </RelativeLayout>
-            </FrameLayout>
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/item_details"
-                android:paddingTop="@dimen/margin_20"
-                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:layout_collapseMode="pin">
-
-                <RelativeLayout
-                    android:id="@+id/back_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="?android:attr/actionBarSize">
-
-                    <ImageView
-                        android:id="@+id/img"
-                        android:layout_width="wrap_content"
-                        android:layout_height="15dp"
-                        android:layout_centerVertical="true"
-                        android:src="@drawable/back_button" />
-
-                    <TextView
-                        android:id="@+id/store_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="@dimen/margin_10"
-                        android:layout_marginRight="@dimen/margin_20"
-                        android:layout_toRightOf="@+id/img"
-                        android:text="Paytm"
-                        android:textColor="@color/white" />
-                </RelativeLayout>
-            </android.support.v7.widget.Toolbar>
-        </android.support.design.widget.CollapsingToolbarLayout>
-    </android.support.design.widget.AppBarLayout>
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/offer_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="@dimen/margin_5"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        android:layout_margin="@dimen/margin_5" />
 
-</android.support.design.widget.CoordinatorLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="?android:attr/actionBarSize"
+        android:layout_marginTop="@dimen/margin_20"
+        android:background="@color/black_tranparent_20">
+
+        <ImageView
+            android:id="@+id/back_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:padding="@dimen/margin_10"
+            app:srcCompat="@drawable/ic_chevron_left_black_24dp" />
+
+        <TextView
+            android:id="@+id/store_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:text=""
+            android:textColor="@color/white" />
+    </RelativeLayout>
+</RelativeLayout>
