--- a/app/src/main/res/layout/activity_transaction_details.xml
+++ b/app/src/main/res/layout/activity_transaction_details.xml
@@ -89,7 +89,6 @@
                 android:paddingRight="@dimen/margin_20">
 
                 <TextView
-                    android:id="@+id/description_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_10"
@@ -97,40 +96,86 @@
                     android:textColor="#2c3f51" />
 
                 <TextView
-                    android:id="@+id/description_details"
+                    android:id="@+id/client_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_20"
                     android:gravity="left"
-                    android:text="Paytm is Offering Flat Rs 10 cashback on Rs 50. Racharge sbill payment should be equal to or greater than RS 50"
+                    android:text="Client: "
                     android:textColor="#838383"
                     android:textSize="@dimen/text_size_13" />
 
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/usernameWrapper"
+                <TextView
+                    android:id="@+id/email"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_5"
+                    android:gravity="left"
+                    android:text="Email: "
+                    android:textColor="#838383"
+                    android:textSize="@dimen/text_size_13" />
+
+                <TextView
+                    android:id="@+id/phone_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_5"
+                    android:gravity="left"
+                    android:text="Phone Number: "
+                    android:textColor="#838383"
+                    android:textSize="@dimen/text_size_13" />
+
+                <TextView
+                    android:id="@+id/transaction_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_5"
+                    android:gravity="left"
+                    android:text="Transaction Date: "
+                    android:textColor="#838383"
+                    android:textSize="@dimen/text_size_13" />
+
+                <TextView
+                    android:id="@+id/total_amount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_5"
+                    android:gravity="left"
+                    android:text="Total amount: "
+                    android:textColor="#838383"
+                    android:textSize="@dimen/text_size_13" />
+
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_20">
+                    android:orientation="horizontal"
+                    android:weightSum="2">
 
-                    <EditText
-                        android:id="@+id/total_amount"
+                    <Button
+                        android:id="@+id/accept"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:focusedByDefault="false"
-                        android:hint="Amount"
-                        android:inputType="numberDecimal"
-                        android:textAppearance="?android:attr/textAppearanceSmall" />
+                        android:layout_height="40dp"
+                        android:layout_marginTop="@dimen/margin_20"
+                        android:layout_weight="1"
+                        android:background="#0d5ada"
+                        android:text="Accept"
+                        android:textColor="@android:color/white"
+                        android:visibility="visible" />
 
-                </android.support.design.widget.TextInputLayout>
+                    <Button
+                        android:id="@+id/reject"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:layout_marginLeft="@dimen/margin_5"
+                        android:layout_marginTop="@dimen/margin_20"
+                        android:layout_weight="1"
+                        android:background="@color/red"
+                        android:text="Reject"
+                        android:textColor="@android:color/white"
+                        android:visibility="visible" />
 
-                <Button
-                    android:id="@+id/submit"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginTop="@dimen/margin_20"
-                    android:background="#0d5ada"
-                    android:text="Submit"
-                    android:textColor="@android:color/white" />
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
@@ -161,6 +206,4 @@
             android:text="Offer Details"
             android:textColor="@color/white" />
     </RelativeLayout>
-
-    <include layout="@layout/progress_layout"></include>
 </RelativeLayout>
